update: 지역 조회 법정동코드로 통일 및 조회 기능 수정